--- a/src/index.css
+++ b/src/index.css
@@ -24,10 +24,12 @@ code {
 }
 
 .results {
-  width: 30%;
+  width: 35%;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background-color: #EFF5F5;
+  padding: 15px;
 }
 
 .drawResults {
@@ -35,6 +37,7 @@ code {
   flex-direction: column;
   flex-wrap: wrap;
   height: 80%;
+  column-gap: 10px;
 }
 
 .result_map {
@@ -46,20 +49,22 @@ code {
 .result_header {
   background-color: #497174;
   color: #EFF5F5;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .result_title {
   padding-bottom: 40px;
   font-weight: bolder;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: xx-large;
 }
 
 .result_item {
   height: 22px;
-  border: solid 1px;
 }
 
 .picks {
-  width: 75%;
+  width: 65%;
   display: flex;
   flex-direction: column;
 }
@@ -68,21 +73,26 @@ code {
   display: flex;
   flex-direction: column;
   height: 25%;
-  margin-top: 20px;
 }
 
 .player_header {
   height:25%;
+  width: 100%;
+  color: #D6E4E5;
   font-size: xx-large;
   font-weight: bolder;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: #497174;
+  padding-top: 5px;
 }
 
 .player_name {
   height: 75%;
-  font-size: xx-large;
+  font-size: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: fantasy;
 }
 
 .country {
@@ -93,9 +103,15 @@ code {
 }
 
 .country_header {
-  height:25%;
+  height:10%;
+  width:100%;
+  color: #D6E4E5;
   font-size: xx-large;
   font-weight: bolder;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: #497174;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .buttons {
@@ -111,6 +127,7 @@ button {
   cursor: pointer;
   background-color: #EB6440;
   border-radius: 15px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 button:hover {
@@ -119,7 +136,8 @@ button:hover {
 }
 
 .fade-in-text {
-  font-family: Arial;
+  font-family: fantasy;
+  padding-top: 15px;
   font-size: 60px;
   animation: fadeIn 15s;
   -webkit-animation: fadeIn 15s;
@@ -132,11 +150,11 @@ button:hover {
   margin: 10px;
   height: 40%;
   width: 30%;
-  animation: fadeIn 15s;
-  -webkit-animation: fadeIn 15s;
-  -moz-animation: fadeIn 15s;
-  -o-animation: fadeIn 15s;
-  -ms-animation: fadeIn 15s;
+  animation: fadeIn 10s;
+  -webkit-animation: fadeIn 10s;
+  -moz-animation: fadeIn 10s;
+  -o-animation: fadeIn 10s;
+  -ms-animation: fadeIn 10s;
 }
 
 @keyframes fadeIn {
